@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.2
 Date: ????
-  Changes:
+  Bugfixes:
+    - Commands should no longer crash when entered from a server console
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.1
 Date: 2024-11-07
